--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="navbar.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="navbar">
+      <div class="options">
+        <div>About</div>
+        <div>Work</div>
+        <div>Contact</div>
+      </div>
+    </div>
+  </body>
 </html>
