created welcome section

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,5 +14,9 @@
         <div>Contact</div>
       </div>
     </div>
+    <div class="welcome-section">
+      <h1>Im Mujtaba</h1>
+      <p>working on my first project!!</p>
+    </div>
   </body>
 </html>
