project section halfway

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="project-section.css" />
   </head>
   <body>
     <div class="navbar">
@@ -17,6 +18,43 @@
     <div class="welcome-section">
       <h1>Im Mujtaba</h1>
       <p>working on my first project!!</p>
+    </div>
+    <div class="project-section">
+      <h2 class="section-heading">These are some of the projects</h2>
+      <div class="projects-flex">
+        <div class="project-view">
+          <img class="project-image" src="projects-photos/calc.png" alt="" />
+          <p class="project-title"></p>
+        </div>
+        <div class="project-view">
+          <img class="project-image" src="projects-photos/map.jpg" alt="" />
+          <p class="project-title"></p>
+        </div>
+        <div class="project-view">
+          <img
+            class="project-image"
+            src="projects-photos/random-quote-machine.png"
+            alt=""
+          />
+          <p class="project-title"></p>
+        </div>
+        <div class="project-view">
+          <img
+            class="project-image"
+            src="projects-photos/tic-tac-toe.png"
+            alt=""
+          />
+          <p class="project-title"></p>
+        </div>
+        <div class="project-view">
+          <img class="project-image" src="projects-photos/tribute.jpg" alt="" />
+          <p class="project-title"></p>
+        </div>
+        <div class="project-view">
+          <img class="project-image" src="projects-photos/wiki.png" alt="" />
+          <p class="project-title"></p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
