contact section initial

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="project-section.css" />
+    <link rel="stylesheet" href="contact-section.css" />
   </head>
   <body>
     <div class="navbar">
@@ -54,6 +55,18 @@
           <img class="project-image" src="projects-photos/wiki.png" alt="" />
           <p class="project-title"></p>
         </div>
+      </div>
+    </div>
+
+    <div class="contact-section">
+      <h2>Lets work together</h2>
+      <p>How do you take your coffee?</p>
+      <div class="contact-links">
+        <button class="btn">Facebook</button>
+        <button class="btn">Github</button>
+        <button class="btn">Twitter</button>
+        <button class="btn">Call me</button>
+        <button class="btn">Send a mail</button>
       </div>
     </div>
   </body>
